# albatross-uv-demo

./: Dockerfile.albatross  Dockerfile.bird-feeder  README.md  pyproject.toml  test.sh
src/albatross/: core.py  main.py
