[project]
name = "albatross"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
np = [
    "numpy>=2.4.3",
]

[tool.uv.sources]
bird-feeder = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

